- fixed startup & spellline heuristics
- to test: DeathKnightBloodStrike