@@ -7,7 +7,7 @@ using WCell.Util;
 
 namespace WCell.RealmServer.Quests
 {
-	public struct QuestXPInfo
+	public class QuestXPInfo
 	{
 		public int Level;
 		public int[] RewXP;
