@@ -96,7 +96,7 @@ namespace WCell.RealmServer.Spells
 		public override NPC Summon(SpellCast cast, ref Vector3 targetLoc, NPCEntry entry)
 		{
 			var npc = base.Summon(cast, ref targetLoc, entry);
-			npc.MayMove = false;
+			npc.HasOwnerPermissionToMove = false;
 			return npc;
 		}
 	}
